--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,35 +1,43 @@
-<div class="login h-screen flex items-center justify-center md:bg-indigo-600">
-  <form class="p-6 w-full md:w-1/2 md:rounded-lg bg-white md:shadow-xl text-gray-800" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <h2 class="text-2xl py-3 text-center">Sign In</h2>
-    <section class="fields mt-6">
-      <div class="text-center">
-        <mat-form-field>
-          <input matInput type="text" formControlName="username" placeholder="Username" aria-label="Username">
-          <mat-icon matSuffix class="pointer"></mat-icon>
-          <mat-error class="error-message" *ngIf="username.hasError('required')">Required</mat-error>
-        </mat-form-field>
-      </div>
-      <div class="text-center">
-        <mat-form-field>
-          <input matInput placeholder="Password" formControlName="password" [type]="hidePassword ? 'password' : 'text'">
-          <mat-icon matSuffix (click)="hidePassword = !hidePassword" class="pointer">
-            {{hidePassword ? 'visibility_off' : 'visibility'}}
-          </mat-icon>
-          <mat-error class="error-message" *ngIf="password.hasError('required')">Required</mat-error>
-        </mat-form-field>
-      </div>
-      <mat-error class="text-center" *ngIf="!!errorText">
-        <span>{{errorText}}</span>
-      </mat-error>
-    </section>
-  
-    <section class="submit">
-      <div class="text-center">
-        <div [style.visibility]="waiting ? 'visible' : 'hidden'" class="spin-container animation-spin">
-          <mat-icon aria-label="loading" color="primary" class="x2">autorenew</mat-icon>
+<div class="login flex">
+  <div class="h-screen md:w-1/2 hidden md:flex items-center content-center justify-center md:bg-indigo-600 flex-wrap">
+    <object data="assets/aircraft.svg" class="w-1/2 p-4 mx-4" type=""></object>
+    <object data="assets/searching.svg" class="w-1/2 p-4 mx-4" type=""></object>
+  </div>
+  <div class="h-screen w-full md:w-1/2 flex justify-center content-center items-center flex-wrap">
+    <object data="assets/aircraft.svg" class="w-1/3 p-4 mx-4 md:hidden" type=""></object>
+    <div class="text-4xl w-full text-center py-6 mb-6 font-serif">Flight Tracker</div>
+    <form class="md:w-1/2 inline-block bg-white pt-5 text-gray-800" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <h2 class="text-2xl pb-3 pt-6 text-center">Sign In</h2>
+      <section class="fields mt-6">
+        <div class="text-center">
+          <mat-form-field>
+            <input matInput type="text" formControlName="username" placeholder="Username" aria-label="Username">
+            <mat-icon matSuffix class="pointer"></mat-icon>
+            <mat-error class="error-message" *ngIf="username.hasError('required')">Required</mat-error>
+          </mat-form-field>
         </div>
-        <button mat-raised-button color="primary" [disabled]="!loginForm.valid">Log In</button>
-      </div>
-    </section>
-  </form>
+        <div class="text-center">
+          <mat-form-field>
+            <input matInput placeholder="Password" formControlName="password" [type]="hidePassword ? 'password' : 'text'">
+            <mat-icon matSuffix (click)="hidePassword = !hidePassword" class="pointer">
+              {{hidePassword ? 'visibility_off' : 'visibility'}}
+            </mat-icon>
+            <mat-error class="error-message" *ngIf="password.hasError('required')">Required</mat-error>
+          </mat-form-field>
+        </div>
+        <mat-error class="text-center" *ngIf="!!errorText">
+          <span>{{errorText}}</span>
+        </mat-error>
+      </section>
+    
+      <section class="submit">
+        <div class="text-center">
+          <div [style.visibility]="waiting ? 'visible' : 'hidden'" class="spin-container animation-spin">
+            <mat-icon aria-label="loading" color="primary" class="x2">autorenew</mat-icon>
+          </div>
+          <button mat-raised-button color="primary" [disabled]="!loginForm.valid">Log In</button>
+        </div>
+      </section>
+    </form>
+  </div>
 </div>
