--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -13,7 +13,12 @@
       </div>
       <div class="field px-3 w-full sm:w-auto flex justify-center">
         <mat-form-field>
-          <input type="number" placeholder="X minutes (350+)" aria-label="X minutes" matInput formControlName="minutes" />
+          <input type="number" placeholder="X hours (0 - 60)" aria-label="X minutes" matInput formControlName="hours" />
+        </mat-form-field>
+      </div>
+      <div class="field px-3 w-full sm:w-auto flex justify-center">
+        <mat-form-field>
+          <input type="number" placeholder="X minutes (0 - 60)" aria-label="X hours" matInput formControlName="minutes" />
         </mat-form-field>
       </div>
       <div class="flex items-center px-3 w-full sm:w-auto flex justify-center">
